# Tensor-Implementations

./: .gitignore  CMakeLists.txt  CUDAAllocator.cpp  Makefile  README.md  demo  lib_compile.sh  matmul_dummy.cpp  test_compile.sh  test_core  test_device_support  test_device_support_remaining  test_exp  test_own
Tests/Arithmetics Tests/: Arith_Edgecases.cpp  Arith_Test.cpp  Power_Test.cpp
Tests/Exponents Tests/: Basic_Test.cpp  EdgeCase_Test.cpp
Tests/ExponentsTests/: EdgeCase_Test.cpp
Tests/NeuralNetTests/: Dummy2.cpp  NeuralNet_1.cpp
Tests/Reductions Tests/: ReductionGPU_Test.cpp  Test_1.cpp  Test_2.cpp  Test_3.cpp  Test_4.cpp  Test_5.cpp  Test_6.cpp  Test_GPU_CPU.cpp
Tests/ReductionsTests/: stat_test.cpp
Tests/Tensor Tests/: CudaTest_1.cpp  CudaTest_2.cpp  CudaTest_3.cpp  CudaTest_4.cpp  CudaTest_5.cpp  CudaTest_6.cpp  CudaTest_7.cpp  UnitTest_1.cpp  (+11 more)
include/: DtypeTraits.h  Reduction.h  ReductionImpl.h  ReductionOps.h  ReductionUtils.h  ScalarOps.h  Tensor.h  TensorDataManip.h  TensorDispatch.h  TensorLib.h  TensorUnaryOps.hpp  TensorUtils.hpp  UnaryAutoRegister.hpp  UnaryOps.h  UnaryUnifiedDispatcher.h  exp_log_kernels.hpp  tensor.h  types.h
mlp_tests/: benchmark_matmul.cpp  test_device_support.cpp  test_device_support_remaining.cpp  test_gelu.cpp  test_loss.cpp  test_mlp.cpp  test_relu.cpp  test_sigmoid.cpp  test_softmax.cpp  test_tanh.cpp
naive/: dummy_kernels.cpp  exp_log_test0.cpp  exp_log_test1.cpp  exp_log_test2.cpp  exp_log_test3.cpp  fp16_bf16_convert.h  main.cpp
src/: Tensor.cpp  TensorFactory.cpp  TensorUtils.cpp  demo.cpp  tensor.cpp
(+136 files in other folders)
